# DepthImageAnnotator

./: .gitignore  CMakeLists.txt  README.md
include/: .annotate.py.swp  .dia_test.py.swp  .eval.py.swp  .review.py.swp  0009_paramL.txt  0024_paramL.txt  :w  Reinitializer.cpp  Reinitializer.h  Shader.h  SkeletonMesh.h  SkeletonModel.h  annotate.py  depth_image.exr  depth_image_annotator.h  depth_image_annotator.i  dia_test.py  eval.py  eval_reinitializer_pbt.py  review.py  visualize_pso.py
res/: eric_foot_left.dae  eric_foot_left_above_ankle.dae  eric_foot_left_even_shorter.dae  eric_foot_left_vertices_reduced.dae  eric_foot_right.dae  eric_foot_right_above_ankle.dae  eric_foot_right_even_shorter.dae  eric_foot_right_vertices_reduced.dae  eric_left_longer_leg.dae  eric_leg_left.dae  eric_leg_right.dae  eric_right_longer_leg.dae
res/shaders/: ModelFS.glsl  ModelVS.glsl  PTFS.glsl  PTVS.glsl  PassThroughQuadVertexShader.glsl  PoleFShader.glsl  PoleVShader.glsl  PoleWriteFShader.glsl  PoleWriteVShader.glsl  RTTFShader.glsl  RTTVShader.glsl  Reduction2FShader.glsl  SubtractionFragmentShader.glsl
src/: main.cpp
